--- a/app/assets/stylesheets/notifications.scss
+++ b/app/assets/stylesheets/notifications.scss
@@ -7,8 +7,8 @@ $watermelon: #FF3B3F;
 $neutral: #EFEFEF;
 
 ul.notificator {
-  margin-top: 9px;
-  margin-right: 10px;
+  margin: auto;
+  padding: 7px 22px;
   z-index: 1000;
   li
   {
